# ai-game-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: arquitectura.md  ci-cd.md  editor.md  exportadores.md  guia-inicio.md  guia-publicacion.md  ia.md  plan.md  plugins.md  proyecto.md  runtime.md  testing.md  vision.md
editor/: index.html  package-lock.json  package.json
editor/src/: App.css  App.tsx  anim.ts  document.ts  ipc.ts  store.tsx  types.ts
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/src/: agents.rs  ai.rs  lib.rs  settings.rs
editor/src/panels/: AssetsPanel.tsx  ChatPanel.tsx  ConsolePanel.tsx  Inspector.tsx  SceneTree.tsx  SettingsPanel.tsx  Timeline.tsx  Toolbar.tsx  Viewport.tsx
examples/bouncing-sprites/: Cargo.toml  README.md
examples/bouncing-sprites/src/: main.rs
examples/hello-world/: README.md  game.aigs
examples/hello-world/scenes/: level1.scene.aigs  main.scene.aigs
examples/physics-playground/: README.md  game.aigs
examples/physics-playground/scenes/: main.scene.aigs
examples/robot-rescue/: README.md  game.aigs
examples/robot-rescue/scenes/: level.scene.aigs  menu.scene.aigs  win.scene.aigs
examples/robot-rescue/scripts/: patrol.rhai
examples/tamagotchi/: README.md  game.aigs
examples/tamagotchi/scenes/: pet.scene.aigs
examples/tamagotchi/scripts/: pet.rhai
exporters/android/: Cargo.toml
exporters/android-player/: Cargo.toml
exporters/android-player/src/: lib.rs
exporters/android/src/: lib.rs
exporters/desktop/: Cargo.toml
exporters/desktop/src/: lib.rs
exporters/web/: Cargo.toml
exporters/web-player/: Cargo.toml
exporters/web-player/src/: lib.rs
exporters/web/src/: lib.rs
runtime/crates/aigs-anim/: Cargo.toml
runtime/crates/aigs-anim/benches/: sampling.rs
runtime/crates/aigs-anim/src/: lib.rs
runtime/crates/aigs-ecs/: Cargo.toml
runtime/crates/aigs-ecs/benches/: world.rs
runtime/crates/aigs-ecs/src/: lib.rs  storage.rs
runtime/crates/aigs-project/: Cargo.toml
runtime/crates/aigs-project/src/: lib.rs
runtime/crates/aigs-render/: Cargo.toml
runtime/crates/aigs-render/src/: lib.rs  renderer.rs  shader.wgsl
runtime/crates/aigs-runtime/: Cargo.toml
runtime/crates/aigs-runtime/src/: app.rs  assets.rs  audio.rs  components.rs  input.rs  lib.rs  particles.rs  physics.rs  playback.rs  player.rs  save.rs  scene.rs  scripting.rs  source.rs  time.rs
sdk/aigs-format/: SPEC.md  scripting-api.json
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: hello_world.rs  scripting_api.rs
