[workspace]
resolver = "2"
members = [
    "runtime/crates/aigs-ecs",
    "runtime/crates/aigs-render",
    "runtime/crates/aigs-anim",
    "runtime/crates/aigs-project",
    "runtime/crates/aigs-runtime",
    "cli",
    "exporters/desktop",
    "exporters/web",
    "tests/integration",
    "examples/bouncing-sprites",
]
# The Tauri app manages its own build (bundling, system deps). The web
# player only ever builds for wasm32-unknown-unknown (a cdylib, not
# something `cargo build --workspace` on the host toolchain can produce).
exclude = ["editor/src-tauri", "exporters/web-player"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agilphp/ai-game-studio"
authors = ["efrasoft and AI Game Studio contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
