[workspace]
resolver = "2"
members = [
    "runtime/crates/aigs-ecs",
    "runtime/crates/aigs-render",
    "runtime/crates/aigs-anim",
    "runtime/crates/aigs-project",
    "runtime/crates/aigs-runtime",
    "cli",
    "exporters/desktop",
    "exporters/web",
    "exporters/android",
    "tests/integration",
    "examples/bouncing-sprites",
]
# The Tauri app manages its own build (bundling, system deps). The web and
# Android players only ever build for their own target (wasm32-unknown-unknown,
# aarch64-linux-android) — cdylibs, not something `cargo build --workspace`
# on the host toolchain can produce.
exclude = ["editor/src-tauri", "exporters/web-player", "exporters/android-player"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agilphp/ai-game-studio"
authors = ["efrasoft and AI Game Studio contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
