[package]
name = "aigs-cli"
description = "Command line tool for AI Game Studio projects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "aigs"
path = "src/main.rs"

[dependencies]
aigs-export-desktop = { version = "0.2.0", path = "../exporters/desktop" }
aigs-export-web = { path = "../exporters/web" }
aigs-project = { path = "../runtime/crates/aigs-project" }
aigs-runtime = { version = "0.2.0", path = "../runtime/crates/aigs-runtime" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
