[package]
name = "aigs-export-desktop"
description = "Desktop exporter: packs a project and the self-player binary into a distributable folder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aigs-project = { path = "../../runtime/crates/aigs-project" }
thiserror = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
