[package]
name = "aigs-web-player"
description = "Web exporter (milestone M14): runs an .aigs project in the browser via WebGPU/WebGL"
version = "0.2.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
aigs-project = { path = "../../runtime/crates/aigs-project" }
aigs-runtime = { path = "../../runtime/crates/aigs-runtime" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Response", "RequestInit", "console"]

[profile.release]
opt-level = "s"
lto = true
