[package]
name = "aigs-render"
description = "2D renderer of the AI Game Studio runtime (WGPU)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
thiserror = { workspace = true }
wgpu = "24"
winit = "0.30"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
