[package]
name = "aigs-runtime"
description = "Game loop, base components and window runner of the AI Game Studio runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aigs-ecs = { path = "../aigs-ecs" }
aigs-render = { path = "../aigs-render" }
thiserror = { workspace = true }
winit = "0.30"
