[package]
name = "aigs-runtime"
description = "Game loop, base components and window runner of the AI Game Studio runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aigs-anim = { path = "../aigs-anim" }
aigs-ecs = { path = "../aigs-ecs" }
aigs-project = { version = "0.1.0", path = "../aigs-project" }
aigs-render = { path = "../aigs-render" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
kira = { version = "0.12.1", default-features = false, features = ["cpal", "pcm", "wav"] }
rapier2d = "0.33.0"
thiserror = { workspace = true }
winit = "0.30"
