[package]
name = "aigs-runtime"
description = "Game loop, base components and window runner of the AI Game Studio runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aigs-anim = { path = "../aigs-anim" }
aigs-ecs = { path = "../aigs-ecs" }
aigs-project = { version = "0.3.0", path = "../aigs-project" }
aigs-render = { path = "../aigs-render" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
kira = { version = "0.12.1", default-features = false, features = ["cpal", "pcm", "wav"] }
rapier2d = "0.33.0"
rhai = "1.25.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
winit = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
ndk = "0.9"
